# Maxfpeed

./: CMakeLists.txt  README.md  makefile  run.sh
detectModule/: CMakeLists.txt
detectModule/EIFFEL/include/: DBSCAN.h  createInput.h  errordetect.h
detectModule/EIFFEL/src/: DBSCAN.cpp  createInput.cpp  curvefitting.py  curvepoint.csv  dbscan.py  errordetect.cpp  galaxy.csv  getMultiResult.cpp
detectModule/HSED/include/: common.h  float.h  getresult.h
detectModule/HSED/src/: common.cpp  float.cpp  getresult.cpp
detectModule/mpfrCodeGene/include/: basic.h  color.h  geneCode.h  laxerAST.h  parserAST.h
detectModule/mpfrCodeGene/src/: basic.cpp  geneCode.cpp  laxerAST.cpp  main.cpp  parserAST.cpp
maxFpeedMain/: main.cpp
